tests/data/bad/bad_node_required_subclass.py
from ntc import CN

from ..good.good import cfg


class BadSubClass:
    pass


cfg = CN(cfg)
cfg.SUBCLASS = None
